New vue.js functions
Found out about keyboard events, two way bindings, computed properties and Dynamic CSS. Also found out that ! complements value of boolean.
In CSS found out that element with two classes is write ".first.second", and that ".class span" means that span element with .class is going to be changed.

--- a/style.css
+++ b/style.css
@@ -4,3 +4,15 @@
     text-align: center;
     border: 1px solid #333333;
 }
+
+.available span {
+    background: chartreuse;
+}
+
+.nearby span {
+    background: red;
+}
+
+.available.nearby span {
+    background: purple;
+}
