Learned more Functions
Today we learned how to have more than one vue.js instance, if and show, for loop, created small "punching bag" game, found out about vue.js components.
Next part is Vue.js CLI project, and that will be in another folder, but this word file will have information about that too so he will not be moved.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .available span {
-    background: chartreuse;
+    background: rgb(159, 248, 69);
 }
 
 .nearby span {
@@ -15,4 +15,38 @@
 
 .available.nearby span {
     background: purple;
+}
+
+p#naslovi {
+    font-family: serif;
+    font-size: x-large;
+    color: tomato;
+}
+
+#bag {
+    width: 200px;
+    height: 500px;
+    background: url(/img/bag.png) center no-repeat;
+    background-size: 80%;
+}
+
+#bag-health {
+    width: 200px;
+    border: 2px solid black;
+}
+
+#bag-health div {
+    height: 20px;
+    background: crimson;
+}
+
+#controls {
+    width:  120px;
+    margin-top: 10px;
+    margin-left: 39px;
+}
+
+#bag.burst {
+    background: url(/img/bag-burst.png) center no-repeat;
+    background-size: 80%;
 }
